--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kracker71/DDD-APIGateway#readme",
   "dependencies": {
+    "@grpc/grpc-js": "^1.9.9",
     "axios": "^1.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
